fix: overflow-x on mobile

--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -72,6 +72,7 @@
     z-index: 999;
     transform: translateX(100%);
 
+    display: flex;
     flex-direction: column;
     gap: 4rem;
 
